# multi-truck-scenario

./: .gitignore  CMakeLists.txt  README.md  backlog.md  package.xml  todo.md
config/: Values_detectorV1  config_1.rviz  params.yaml
includes/: classification.hpp  event_site.hpp  scenario_detector.hpp  scenario_solver.hpp  scenario_type.hpp  tutils.h
launch/: big_test.launch.py  map_node.launch.py  map_node1.launch.py  map_node2.launch.py  scenario_S1.launch.py  scenario_S2.launch.py  truck_nodes.launch.py  vehicle.launch.py
msg/: DetectionProposal.msg  EventSiteData.msg  S2Solution.msg  Solution.msg  StreetData.msg  VehicleBaseData.msg
script/: i2g_debug.py  image2grid_converter.py  image2scene.py  image_converter.py  mirror_image.py
src/: classification.cpp  map.cpp  node_vehicle.cpp  scenario_detector.cpp  scenario_solver.cpp  test.cpp  test.txt  tutils.cpp  vehicle.cpp
srv/: .GetEventSiteDistance.srv.swp  GetEventSiteDistance.srv  GetEventSiteID.srv
